travis.yml: install old pyflakes on Python 2.6, 3.2, 3.3.
pyflakes 2.0.0 requires Python 2.7 or 3.4+.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ python:
 - "3.5"
 - "3.6"
 - "3.7-dev"
+before_install:
+- pyflakes=pyflakes
+- if [[ $TRAVIS_PYTHON_VERSION = 2.6 ]]; then pyflakes='pyflakes<2'; fi
+- if [[ $TRAVIS_PYTHON_VERSION = 3.[23] ]]; then pyflakes='pyflakes<2'; fi
 install:
-- pip install pydiatra pyflakes
+- pip install pydiatra $pyflakes
 script:
 - nosetests -v
 - python -m pydiatra test.py
