--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 - "3.5"
 - "3.6"
 - "3.7-dev"
+cache: pip
 before_install:
 - pyflakes=pyflakes
 - if [[ $TRAVIS_PYTHON_VERSION = 2.6 ]]; then pyflakes='pyflakes<2'; fi
