--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 dist: trusty
 language: python
-python:
-- "2.6"
-- "2.7"
-- "3.2"
-- "3.3"
-- "3.4"
-- "3.5"
-- "3.6"
-- "3.7-dev"
+jobs:
+  include:
+  - python: "2.6"
+  - python: "2.7"
+  - python: "3.2"
+  - python: "3.3"
+  - python: "3.4"
+  - python: "3.5"
+  - python: "3.6"
+  - python: "3.7-dev"
 cache: pip
 before_install:
 - pyflakes=pyflakes
