--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ jobs:
   - python: "3.4"
   - python: "3.5"
   - python: "3.6"
-  - python: "3.7-dev"
+  - python: "3.7"
+    dist: xenial
 cache: pip
 before_install:
 - pyflakes=pyflakes
