--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ jobs:
   - python: "3.6"
   - python: "3.7"
     dist: xenial
+  - python: "3.8-dev"
+    dist: xenial
 cache: pip
 before_install:
 - pyflakes=pyflakes
