--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
   - python: "3.5"
   - python: "3.6"
   - python: "3.7"
-  - python: "3.8-dev"
+  - python: "3.8"
 cache: pip
 before_install:
 - pyflakes=pyflakes
