--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
   - python: "3.6"
   - python: "3.7"
   - python: "3.8"
+  - python: "3.9-dev"
 cache: pip
 before_install:
 - pyflakes=pyflakes
