--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           os: ubuntu-20.04
         - python-version: '3.9'
           os: ubuntu-20.04
-        - python-version: '3.10-dev'
+        - python-version: '3.10'
           os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
