--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           os: ubuntu-20.04
         - python-version: '3.10'
           os: ubuntu-20.04
+        - python-version: '3.11-dev'
+          os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{matrix.python-version}}
@@ -35,6 +37,8 @@ jobs:
     - name: run tests
       run: |
         python -m pip install --no-binary ':all:' nose
+        # work-around for <https://github.com/nose-devs/nose/issues/1116>:
+        sed -i -e 's/ from unittest import _TextTestResult$/ from unittest import TextTestResult as _TextTestResult/' /opt/hostedtoolcache/Python/*/*/lib/python*/site-packages/nose/result.py
         nosetests -v
     - name: run pydiatra
       run: |
