--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           os: ubuntu-20.04
         - python-version: '3.10'
           os: ubuntu-20.04
-        - python-version: '3.11-dev'
+        - python-version: '3.11'
           os: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
