--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
           os: ubuntu-22.04
         - python-version: '3.11'
           os: ubuntu-22.04
+        - python-version: '3.12-dev'
+          os: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - name: set up Python ${{matrix.python-version}}
