--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
           os: debian/eol:squeeze
         - python-version: '2.7'
           os: debian/eol:wheezy
+        - python-version: '3.0'
+          os: ubuntu:10.04
         - python-version: '3.1'
           os: debian/eol:squeeze
         - python-version: '3.2'
